# RICE-ENV

./: .gitignore  Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
rice_env/: crops.py  graders.py  rewards.py  simulator.py
server/: app.py  environment.py
ui/: gradio_app.py
